# app-service-agent-memory

./: .env.example  .gitignore  .webappignore  CONTRIBUTING.md  README.md  SECURITY.md  azure.yaml  pyproject.toml  requirements.txt
.azure/: .gitignore  deployment-plan.md
app/: __init__.py  agent.py  config.py  credentials.py  embeddings.py  main.py  models.py  providers.py  rate_limit.py  stores.py  telemetry.py
app/static/: app.js  index.html  styles.css
blog/: techcommunity.html  techcommunity.md
docs/architecture/: architecture.excalidraw
infra/: main.bicep  resources.bicep
scripts/: smoke_test.py
tests/: test_api.py  test_providers.py  test_stores.py
