[project]
name = "app-service-agent-memory"
version = "0.1.0"
description = "Persistent cross-session agent memory on Azure App Service"
requires-python = ">=3.13,<3.14"
dependencies = [
  "agent-framework-core==1.11.0",
  "agent-framework-openai==1.10.1",
  "aiohttp==3.14.1",
  "azure-cosmos==4.16.1",
  "azure-identity==1.25.3",
  "azure-monitor-opentelemetry==1.8.9",
  "fastapi==0.139.0",
  "openai==2.45.0",
  "pydantic-settings==2.14.2",
  "redis==8.0.1",
  "redis-entraid==1.2.1",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["redis_entraid.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
